--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.4.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.30.0",
-    "jose": "^5.9.6"
+    "@vercel/analytics": "^1.5.0",
+    "jose": "^5.9.6",
+    "next": "15.4.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
